--- a/airline/package.json
+++ b/airline/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.0",
+    "server": "^1.0.39"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
