--- a/airline/package.json
+++ b/airline/package.json
@@ -15,12 +15,14 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "animate.css": "^4.1.1",
     "bootstrap": "^5.3.3",
+    "js": "^0.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
     "react-intersection-observer": "^9.13.0",
     "react-router-dom": "^6.26.0",
     "server": "^1.0.39",
+    "wow": "^0.0.6",
     "wowjs": "^1.1.3"
   },
   "devDependencies": {
