--- a/airline/package.json
+++ b/airline/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
     "react-intersection-observer": "^9.13.0",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^6.26.0",
     "server": "^1.0.39",
     "wow": "^0.0.6",
