--- a/airline/package.json
+++ b/airline/package.json
@@ -10,16 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.6.0",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "animate.css": "^4.1.1",
     "bootstrap": "^5.3.3",
-
-    "js": "^0.1.0",
-
     "framer-motion": "^11.3.24",
-
+    "js": "^0.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
