--- a/airline/package.json
+++ b/airline/package.json
@@ -22,7 +22,9 @@
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
     "react-intersection-observer": "^9.13.0",
-    "react-router-dom": "^6.26.0",
+    "react-modal": "^3.16.1",
+    "react-router-dom": "^6.26.1",
+    "react-toastify": "^10.0.5",
     "server": "^1.0.39",
     "wow": "^0.0.3",
     "wowjs": "^1.1.3"
