--- a/airline/flight-booking-backend/package.json
+++ b/airline/flight-booking-backend/package.json
@@ -15,5 +15,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.5.4"
+  },
+  "devDependencies": {
+    "json-server": "^1.0.0-beta.2"
   }
 }
