--- a/airline/package.json
+++ b/airline/package.json
@@ -24,6 +24,7 @@
     "react-helmet": "^6.1.0",
     "react-intersection-observer": "^9.13.0",
     "react-modal": "^3.16.1",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.26.1",
     "react-toastify": "^10.0.5",
     "server": "^1.0.39",
