--- a/airline/package.json
+++ b/airline/package.json
@@ -19,6 +19,7 @@
     "bootstrap": "^5.3.3",
     "framer-motion": "^11.3.24",
     "js": "^0.1.0",
+    "jsonwebtoken": "^9.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
